@@ -7,12 +7,14 @@
  */
 package org.dspace.uclouvain.services;
 
-import static java.util.Optional.ofNullable;
-
+import java.util.Collections;
 import java.util.List;
+import java.util.NoSuchElementException;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
-import jakarta.ws.rs.NotFoundException;
+import org.apache.commons.lang3.StringUtils;
+import org.apache.logging.log4j.Logger;
 import org.dspace.content.Collection;
 import org.dspace.content.Item;
 import org.dspace.content.WorkspaceItem;
@@ -28,6 +30,9 @@ import org.dspace.discovery.indexobject.IndexableInProgressSubmission;
 import org.dspace.discovery.indexobject.IndexableItem;
 import org.dspace.discovery.indexobject.IndexableWorkflowItem;
 import org.dspace.discovery.indexobject.IndexableWorkspaceItem;
+import org.dspace.eperson.EPerson;
+import org.dspace.eperson.service.EPersonService;
+import org.dspace.uclouvain.profileIngester.services.IDMPersonValidityService;
 import org.springframework.beans.factory.annotation.Autowired;
 
 /**
@@ -36,123 +41,139 @@ import org.springframework.beans.factory.annotation.Autowired;
  * @author Michaël Pourbaix (michael.pourbaix@uclouvain.be)
  */
 public class UCLouvainProfileServiceImpl implements UCLouvainProfileService {
+
+    private static final Logger log = org.apache.logging.log4j.LogManager.getLogger(UCLouvainProfileServiceImpl.class);
+
     @Autowired
     protected ItemService itemService;
-
     @Autowired
     private WorkspaceItemService workspaceItemService;
-
     @Autowired
     private CollectionService collectionService;
-
     @Autowired
     private InstallItemService installItemService;
-
     @Autowired
     private SearchService searchService;
+    @Autowired
+    private EPersonService ePersonService;
+    @Autowired
+    private IDMPersonValidityService idmService;
 
     private static final String PROFILE_ENTITY_TYPE = "Person";
 
-    /**
-     * Find a profile item using an FGS identifier. Returns null if nothing is found.
-     * 
-     * @param context The current DSpace context.
-     * @param fgs The identifier to use in order to find the right profile.
-     * @return Returns the profile that has the given identifier, null otherwise.
-     */
-    public Item findById(Context context, String fgs) throws Exception {
-        // Add the fgs as a filter
+    // IMPLEMENTED FUNCTIONS ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+    public Item findById(Context context, String fgs) {
         return findOneByAttribute(context, "person.identifier.fgs:" + fgs);
     }
 
-    /**
-     * Find a profile item using an email. Returns null if nothing is found.
-     * 
-     * @param context The current DSpace context.
-     * @param email The email to use in order to find the right profile.
-     * @return Returns the profile that has the given email, null otherwise.
-     */
-    public Item findByEmail(Context context, String email) throws Exception {
-        // Add the email as a filter
+    public Item findByEmail(Context context, String email) {
         return findOneByAttribute(context, "person.email:" + email);
     }
 
-    /**
-     * Find a profile item using a given attribute filter. Returns null if nothing is found.
-     * 
-     * @param context The current DSpace context.
-     * @param attributeFilter The filter to use to find a specific profile item.
-     * @return Returns the profile that passes the given filter, null if nothing found.
-     */
-    private Item findOneByAttribute(Context context, String attributeFilter) throws Exception {
+    public List<Item> findLinkedPublications(Context context, Item profile) {
+        if (itemService.getEntityType(profile).equals(PROFILE_ENTITY_TYPE)) {
+            throw new IllegalArgumentException("`profile` paramter isn't a valid Person entity type");
+        }
         DiscoverQuery dq = new DiscoverQuery();
-        // Take only archived items.
-        dq.addDSpaceObjectFilter(IndexableItem.TYPE);
-        dq.addFilterQueries("search.entitytype:" + PROFILE_ENTITY_TYPE);
-        // Add the attribute filter
-        dq.addFilterQueries(attributeFilter);
-        dq.setMaxResults(1);
-        // Convert the search result into a list of item and only keep the first one.
-        return searchService.search(context, dq)
-            .getIndexableObjects()
-            .stream()
-            .map(indexableObject -> ((IndexableItem) indexableObject).getIndexedObject())
-            .findFirst().orElse(null);
-    }
-
-    /**
-     * For a given profile, retrieve all the linked publications that uses this profile has an author.
-     * 
-     * @param context The current DSpace context.
-     * @param profile The profile to find publications for.
-     * @return Any publication that references this profile has an author.
-     */
-    public List<Item> findLinkedPublications(Context context, Item profile) throws Exception {
-        DiscoverQuery dq = new DiscoverQuery();
-
         dq.addDSpaceObjectFilter(IndexableWorkspaceItem.TYPE);
         dq.addDSpaceObjectFilter(IndexableWorkflowItem.TYPE);
         dq.addDSpaceObjectFilter(IndexableItem.TYPE);
         dq.addFilterQueries("search.entitytype:Publication");
-        // Keep only publications that have the profile id as authority of metadata.
         dq.addFilterQueries("author_authority:\"" + profile.getID() + "\"");
-        return searchService.search(context, dq)
-            .getIndexableObjects()
-            .stream()
-            .map((indexableObject) -> {
-                return (indexableObject instanceof IndexableItem)
-                    ? ((IndexableItem) indexableObject).getIndexedObject()
-                    : ((IndexableInProgressSubmission) indexableObject).getIndexedObject().getItem();
-            })
-            .collect(Collectors.toList());
+        try {
+            return searchService.search(context, dq)
+                .getIndexableObjects()
+                .stream()
+                .map((indexableObject) -> (indexableObject instanceof IndexableItem)
+                        ? ((IndexableItem) indexableObject).getIndexedObject()
+                        : ((IndexableInProgressSubmission<?>) indexableObject).getIndexedObject().getItem())
+                .toList();
+        } catch (SearchServiceException ignored) {
+            return Collections.emptyList();
+        }
     }
 
-    /**
-     * Create an empty profile item with an fgs identifier.
-     * 
-     * @param context The current DSpace context.
-     * @param fgs The unique fgs identifier to give to the profile item.
-     */
     public Item createEmptyProfile(Context context, String fgs) throws Exception {
         Collection profileCollection = getProfileCollection(context);
         WorkspaceItem workspaceItem = workspaceItemService.create(context, profileCollection, true);
         Item profile = workspaceItem.getItem();
-
-        // Add the fgs identifier to the profile.
         itemService.addSecuredMetadata(context, profile, "person", "identifier", "fgs", null, fgs, null, 0, 1);
-        profile = installItemService.installItem(context, workspaceItem);
+        return installItemService.installItem(context, workspaceItem);
+    }
 
+    public Item createNewProfile(Context context, EPerson person) throws Exception {
+        String fgs = ePersonService.getMetadataFirstValue(person, "eperson", "identifier", "fgs", null);
+        if (fgs == null) {
+            throw new NoSuchElementException("Missing FGS identifier (employeeNumber) EPerson#" + person.getID());
+        }
+        // Retrieve all the idm entries of the logged person and check if we can create a profile.
+        List<Integer> idmEntries = ePersonService.getMetadata(person, "eperson", "idm", "id", null)
+            .stream()
+            .map(mv -> Integer.parseInt(mv.getValue()))
+            .toList();
+        if (!idmService.isPersonIDMValid(idmEntries)) {
+            log.info("Canceled profile creation for fgs=['" + fgs + "'] :: no IDM entry is valid.");
+            return null;
+        }
+        // Create an empty profile with the fgs and complete with additional metadata:
+        //   * email
+        //   * concatenation of first and last name to create 'dc.title'.
+        Item profile = createEmptyProfile(context, fgs);
+        String email = person.getEmail();
+        log.debug("Found person email form EPerson metadata: " + email);
+        itemService.addSecuredMetadata(context, profile, "person", "email", "official", null, email, null, 0, 1);
+        itemService.addSecuredMetadata(context, profile, "person", "email", null, null, email, null, 0, 1);
+
+        String fullName = Stream.of(person.getLastName(), person.getFirstName())
+            .filter(StringUtils::isNotEmpty)
+            .collect(Collectors.joining(", "));
+        log.debug("Found person fullname form EPerson metadata: " + fullName);
+        if (StringUtils.isNotBlank(fullName)) {
+            itemService.addSecuredMetadata(context, profile, "crisrp", "name", null, null, fullName, null, 0, 1);
+            itemService.addSecuredMetadata(context, profile, "dc", "title", null, null, fullName, null, 0, 0);
+        }
         return profile;
+    }
+
+    // PRIVATE FUNCTIONS ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+    /**
+     * Find a profile item using a given attribute filter.
+     * @param context The current DSpace context.
+     * @param attributeFilter The filter to use to find a specific profile item.
+     * @return Returns the profile that passes the given filter, null if nothing found.
+     */
+    private Item findOneByAttribute(Context context, String attributeFilter) {
+        DiscoverQuery dq = new DiscoverQuery();
+        dq.addDSpaceObjectFilter(IndexableItem.TYPE);
+        dq.addFilterQueries("search.entitytype:" + PROFILE_ENTITY_TYPE);
+        dq.addFilterQueries(attributeFilter);
+        dq.setMaxResults(1);
+        try {
+            return searchService.search(context, dq)
+                .getIndexableObjects()
+                .stream()
+                .map(indexableObject -> ((IndexableItem) indexableObject).getIndexedObject())
+                .findFirst()
+                .orElse(null);
+        } catch (SearchServiceException ignored) {
+            return null;
+        }
     }
 
     /**
      * Get the collection that stores the profile items.
      * @param context The current DSpace context.
      * @return A collection that stores profile items or null if not found.
-     * @throws SearchServiceException
+     * @throws SearchServiceException if search failed
+     * @throws NoSuchElementException if no collection could be found
      */
-    private Collection getProfileCollection(Context context) throws SearchServiceException {
-        return ofNullable(collectionService.findAllCollectionsByEntityType(context, PROFILE_ENTITY_TYPE).get(0))
-            .orElseThrow(() -> new NotFoundException("No collection for " + PROFILE_ENTITY_TYPE + " entity types."));
+    private Collection getProfileCollection(Context context) throws SearchServiceException, NoSuchElementException {
+        return collectionService
+            .findAllCollectionsByEntityType(context, PROFILE_ENTITY_TYPE)
+            .stream()
+            .findFirst()
+            .orElseThrow(() -> new NoSuchElementException("No collection for " + PROFILE_ENTITY_TYPE + " entity type"));
     }
+
+
 }
